--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Academic RuneScape</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -10,32 +10,23 @@
   <h1>Academic RuneScape</h1>
 
   <section class="panel">
-    <button id="chooseFolderBtn">Choose Data Folder</button>
+    <button id="chooseFolderBtn" type="button">Choose Data Folder</button>
     <span id="folderStatus" class="muted">No folder chosen</span>
+    <div class="muted small" style="margin-top:8px;">
+      Note: folder saving may be disabled on file://. If so, the app can still run (we’ll add localStorage fallback in app.js).
+    </div>
   </section>
 
-  <!-- =========================
-       PHYSICS SKILLS (normal)
-       ========================= -->
   <h2 class="sectionTitle">Physics</h2>
   <div id="skillGridPhysics" class="skillGrid"></div>
 
-  <!-- =========================
-       ELITE SKILLS
-       ========================= -->
   <h2 class="sectionTitle">Elite Skills</h2>
   <div id="skillGridElite" class="skillGrid"></div>
 
-  <!-- =========================
-       MATH SKILLS (soon)
-       ========================= -->
   <h2 class="sectionTitle">Math</h2>
   <div id="skillGridMath" class="skillGrid"></div>
   <p class="muted">No math skills yet — but the slot is ready.</p>
 
-  <!-- =========================
-       ADD XP
-       ========================= -->
   <h2>Add XP</h2>
   <section class="panel">
     <div class="xpRow">
@@ -58,10 +49,10 @@
       <label class="srOnly" for="noteInput">Note</label>
       <input id="noteInput" placeholder="Optional note" />
 
-      <button id="addXpBtn">Add XP</button>
+      <button id="addXpBtn" type="button">Add XP</button>
     </div>
 
-    <div class="muted small">
+    <div class="muted small" style="margin-top:10px;">
       Tip: click a skill name to open its “level guide”.
     </div>
   </section>
@@ -77,7 +68,7 @@
         <div id="modalTitle" class="modalTitle">Skill</div>
         <div id="modalSubtitle" class="muted small"></div>
       </div>
-      <button id="closeModalBtn" class="iconBtn" aria-label="Close">✕</button>
+      <button id="closeModalBtn" class="iconBtn" type="button" aria-label="Close">✕</button>
     </div>
 
     <div class="modalBody">
@@ -96,6 +87,25 @@
     </div>
   </div>
 
-  <script type="module" src="app.js"></script>
+  <!-- =========================
+       NO-SERVER SKILL LOADING
+       Each skills/*.js will do:
+       window.SKILL_DEFS.push({...})
+       ========================= -->
+  <script>
+    window.SKILL_DEFS = [];
+  </script>
+
+  <!-- List your skills here (one per file) -->
+  <script src="skills/classical_mechanics.js"></script>
+  <script src="skills/electromagnetism.js"></script>
+  <script src="skills/quantum_mechanics.js"></script>
+  <script src="skills/general_relativity.js"></script>
+  <script src="skills/quantum_field_theory.js"></script>
+  <script src="skills/cosmology.js"></script>
+  <script src="skills/stat_mech.js"></script>
+
+  <!-- App last -->
+  <script src="app.js"></script>
 </body>
 </html>
